Timelines fix on dark mode

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1468,8 +1468,6 @@ button.dropdown-item:hover {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   border-radius: 3px;
   margin-top: 0;
-  background: #fff;
-  color: #444;
   margin-left: 60px;
   margin-right: 15px;
   padding: 0;
