--- a/resources/assets/sass/timeline.scss
+++ b/resources/assets/sass/timeline.scss
@@ -79,8 +79,6 @@
             box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
             border-radius: 3px;
             margin-top: 0;
-            background: #fff;
-            color: #444;
             margin-left: 60px;
             margin-right: 15px;
             padding: 0;
